# QtHardMon

./: CMakeLists.txt  ConfigFileReaderWriter.cpp  ConfigFileReaderWriter.h  Constants.h  CustomDelegates.cpp  CustomDelegates.h  CustomQTreeItem.cpp  CustomQTreeItem.h  Exceptions.h  HexSpinBox.cpp  HexSpinBox.h  PlotWindow.cpp  PlotWindow.h  PlotWindowForm.ui  PreferencesForm.ui  QtHardMon.cpp  QtHardMon.h  QtHardMon.qrc  QtHardMonForm.ui  TableSpinBoxDelegate.cpp  TableSpinBoxDelegate.h  main.cpp
cmake/: Doxyfile.in  FindQwt.cmake  QtHardMon.qrc.in  QtHardMonVersion.h.in  install_debian_package_at_DESY.sh.in  make_debian_package.sh.in  prepare_debian_package.cmake
cmake/Modules/: FindQwt.cmake
cmake/debian_package_templates/: control  control.in  copyright  copyright.in  install  qthardmon.install
doc/code_examples/: ExampleDeviceElementQTreeItem.cpp  ExampleDeviceElementQTreeItem.h  ExamplePropertiesWidget.cpp  ExamplePropertiesWidget.h  ExamplePropertiesWidget.ui  test_ExampleDeviceElementQTreeItem.cpp  test_ExamplePropertiesWidget.cpp
doc/user_guide/: QtHardMon_user_guide.tex
doc/user_guide/chapters/: AppendixA_Mux_Registers.tex  Intro.tex
flatpak/: de.desy.ChimeraTK.QtHardMon.yaml
flatpak/patches/: 0001-Bump-libxml-requirement.patch  bump-xmlpp-requirement.patch  fix-const-cast.patch  fix-include-stdexcept.patch
src/: ConfigFileReaderWriter.cpp  ConfigFileReaderWriter.h  Constants.h  CustomDelegates.cpp  CustomDelegates.h  CustomQTreeItem.cpp  CustomQTreeItem.h  DeviceElementQTreeItem.cpp  DeviceElementQTreeItem.h  ErrorDisplayer.cc  ErrorDisplayer.h  Exceptions.h  GenericRegisterPropertiesWidget.cpp  GenericRegisterPropertiesWidget.h  GenericRegisterPropertiesWidget.ui  HexSpinBox.cpp  HexSpinBox.h  ModulePropertiesWidget.cpp  ModulePropertiesWidget.h  ModulePropertiesWidget.ui  ModuleQTreeItem.cpp  ModuleQTreeItem.h  MultiplexedAreaPropertiesWidget.cpp  MultiplexedAreaPropertiesWidget.h  MultiplexedAreaPropertiesWidget.ui  NumericAddressedCookedMultiplexedAreaQTreeItem.cpp  NumericAddressedCookedMultiplexedAreaQTreeItem.h  NumericAddressedCookedSequenceRegisterQTreeItem.cpp  NumericAddressedCookedSequenceRegisterQTreeItem.h  NumericAddressedElementQTreeItem.cpp  NumericAddressedElementQTreeItem.h  NumericAddressedMultiplexedAreaQTreeItem.cpp  NumericAddressedMultiplexedAreaQTreeItem.h  NumericAddressedRegisterQTreeItem.cpp  NumericAddressedRegisterQTreeItem.h  NumericAddressedSequenceRegisterQTreeItem.cpp  NumericAddressedSequenceRegisterQTreeItem.h  NumericDataTableMixin.cpp  NumericDataTableMixin.h  PlotWindow.cpp  (+37 more)
src/deprecated/: GenericRegisterPropertiesWidget.cpp  ModuleQTreeItem.cpp  MultiplexedAreaPropertiesWidget.cpp  NumericAddressedMultiplexedAreaQTreeItem.h  NumericAddressedRegisterQTreeItem.cpp  NumericAddressedRegisterQTreeItem.h  NumericAddressedSequenceRegisterQTreeItem.cpp  NumericAddressedSequenceRegisterQTreeItem.h  NumericDataTableMixin.cpp  PropertiesWidgetProvider.cpp  RegisterPropertiesWidget.h  RegisterQTreeItem.cpp  SequencePropertiesWidget.cpp  SequencePropertiesWidget.h
tests/: CMakeLists.txt
tests/executables_src/: test_DeviceElementQTreeItem.cpp  test_PreferencesProvider.cpp  test_QtHardMon.cpp  test_RegisterPropertiesWidget.cpp
tests/executables_src/deprecated/: test_RegisterPropertiesWidget.cpp
tests/executables_src/fixme/: test_DeviceElementQTreeItem.cpp  test_QtHardMon.cpp
tests/include/: TestUtilities.h
tests/include/deprecated/: TestUtilities.h
tests/src/: TestUtilities.cpp
tests/src/depecated/: TestUtilities.cpp
tests/test_files/: Doocs.dmap  InvalidSequences.map  LmapDev.xlmap  NumDev.map  NumDevMultiplexed.map  test_QtHardMon_populatesRegisterTree.dmap  test_QtHardMon_push.dmap  test_QtHardMon_valid_dummy.dmap
